flex fix for bottom nav; tweak to rubric letter spacing

--- a/src/stylesheets/components/_bottom-nav.scss
+++ b/src/stylesheets/components/_bottom-nav.scss
@@ -33,7 +33,6 @@
     }
 
     @include above(desktop) {
-      lost-column: 1/3;
       width: 33.3334%;
       padding: 2.6rem 4.6rem 3.4rem;
 
