--- a/src/stylesheets/layout/_typography.scss
+++ b/src/stylesheets/layout/_typography.scss
@@ -85,7 +85,7 @@ $default-type-color: -color(shark);
   font-size: 1.8rem;
   font-weight: -weight(bold);
   line-height: 1.5;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 
